objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Bid_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to true to disable bid visibility.</description>
        <label>Disable Bid Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Guid__c</fullName>
        <description>External unique Id field for the Group object used across data systems. This field is generated in Salesforce upon record creation</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Group Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Major_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies that the Dealerships in this group are major.</description>
        <label>Major Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Monthly_Buy_Volume__c</fullName>
        <description>This field will be manually populated, indicating the Org Group level potential Monthly buy volume of all dealerships within the group</description>
        <label>Potential Monthly Buy Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Monthly_Sell_Volume__c</fullName>
        <description>This field will be manually populated, indicating the Org Group level potential Monthly buy volume of all dealerships within the group</description>
        <label>Potential Monthly Sell Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_150_Rank__c</fullName>
        <description>Field indicating a Group&apos;s Rank in the Top 150 Dealership groups. If they are not in the top 150 this field will be blank</description>
        <inlineHelpText>Field indicating a Group&apos;s Rank in the Top 150 Dealership groups. If they are not in the top 150 this field will be blank</inlineHelpText>
        <label>Top 150 Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <label>Total Accounts</label>
        <summaryFilterItems>
            <field>Group_Affiliation__c.Account__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Affiliation__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Leads_new__c</fullName>
        <label>Total Leads</label>
        <summaryFilterItems>
            <field>Group_Affiliation__c.Lead_Id_Text__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Affiliation__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Organization Group</label>
    <listViews>
        <fullName>Adam_s_Organization_Groups</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Adam&apos;s Organization Groups</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Top_150_Rank__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Top_150_Groups</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Top_150_Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_150_Rank__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Top 150 Groups</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>